# ShairportQt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
app/: DacpService.cpp  DacpService.h  MainDlg.cpp  MainDlg.h  ShairportQt.rc  TimeLabel.cpp  TimeLabel.h  main.cpp  resource.h
app/localization/: English.cpp  German.cpp  Japanese.cpp  LanguageManager.cpp  LanguageManager.h  Languages.h  StringIDs.cpp  StringIDs.h
inc/: Condition.h  DmapParser.h  HairTunes.h  ICondition.h  KeyboardHook.h  LayerCake.h  Networking.h  RaopEndpoint.h  RaopServer.h  SuspendInhibitor.h  Trim.h  base64.h  crypto.h  definitions.h  dnssd.h  libutils.h
inc/audio/: AlsaAudio.h  AudioPlayer.h  PlaySound.h  WaveHeader.h
inc/httplib/: httplib_raop.h
inc/languages/: ILanguageManager.h
install/Linux_x64/: install.sh  uninstall.sh
install/Raspbian/: install.sh  org.shairport.ShairportQt.desktop
lib/: DmapParser.cpp  HairTunes.cpp  KeyboardHook.cpp  LayerCake.cpp  Networking.cpp  RaopEndpoint.cpp  RaopServer.cpp  SuspendInhibitor.cpp  base64.cpp  crypto.cpp  dnssd.cpp  libutils.cpp
lib/audio/: AlsaAudio.cpp  AudioPlayer.cpp
res/: resource.qrc
test/: EndpointTest.cpp  NetworkingTest.cpp  QueueTest.cpp  StreamTest.cpp  TrimTest.cpp  main.cpp
